# hwedis

./: CHANGELOG.md  LICENSE  README.md  e2etest.sh  flake.nix  hwedis.cabal  hwedis.toml
.github/workflows/: ghc-tests.yml
app/: Main.hs
lib/Comm/: Client.hs  Server.hs
lib/Data/: Configuration.hs  Messages.hs
lib/Network/: Client.hs  Redis.hs  Server.hs
test/: Main.hs  RedisTest.hs  TestMessages.hs
